cfgdev/vscode-cfg-extension/src/grammar/CfgParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { CfgVisitor } from "./CfgVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class CfgParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly STRUCT = 3;
    public static readonly INTERFACE = 4;
    public static readonly TABLE = 5;
    public static readonly ENUM = 6;
    public static readonly TLIST = 7;
    public static readonly TMAP = 8;
    public static readonly TBASE = 9;
    public static readonly REF = 10;
    public static readonly LISTREF = 11;
    public static readonly EQ = 12;
    public static readonly LP = 13;
    public static readonly RP = 14;
    public static readonly LB = 15;
    public static readonly RB = 16;
    public static readonly RC = 17;
    public static readonly DOT = 18;
    public static readonly COMMA = 19;
    public static readonly COLON = 20;
    public static readonly PLUS = 21;
    public static readonly MINUS = 22;
    public static readonly LC_COMMENT = 23;
    public static readonly SEMI_COMMENT = 24;
    public static readonly BOOL_CONSTANT = 25;
    public static readonly FLOAT_CONSTANT = 26;
    public static readonly HEX_INTEGER_CONSTANT = 27;
    public static readonly INTEGER_CONSTANT = 28;
    public static readonly STRING_CONSTANT = 29;
    public static readonly IDENT = 30;
    public static readonly COMMENT = 31;
    public static readonly WS = 32;
    public static readonly RULE_schema = 0;
    public static readonly RULE_schema_ele = 1;
    public static readonly RULE_struct_decl = 2;
    public static readonly RULE_interface_decl = 3;
    public static readonly RULE_table_decl = 4;
    public static readonly RULE_enum_decl = 5;
    public static readonly RULE_field_decl = 6;
    public static readonly RULE_foreign_decl = 7;
    public static readonly RULE_key_decl = 8;
    public static readonly RULE_enum_value_empty = 9;
    public static readonly RULE_enum_value_assigned = 10;
    public static readonly RULE_type_ = 11;
    public static readonly RULE_type_ele = 12;
    public static readonly RULE_ref = 13;
    public static readonly RULE_key = 14;
    public static readonly RULE_metadata = 15;
    public static readonly RULE_ident_with_opt_single_value = 16;
    public static readonly RULE_minus_ident = 17;
    public static readonly RULE_single_value = 18;
    public static readonly RULE_enum_number = 19;
    public static readonly RULE_ns_ident = 20;
    public static readonly RULE_identifier = 21;
    public static readonly RULE_leading_comment = 22;
    public static readonly RULE_suffix_comment = 23;

    public static readonly literalNames = [
        null, "'<'", "'>'", "'struct'", "'interface'", "'table'", "'enum'", 
        "'list'", "'map'", null, "'->'", "'=>'", "'='", "'('", "')'", "'['", 
        "']'", "'}'", "'.'", "','", "':'", "'+'", "'-'"
    ];

    public static readonly symbolicNames = [
        null, null, null, "STRUCT", "INTERFACE", "TABLE", "ENUM", "TLIST", 
        "TMAP", "TBASE", "REF", "LISTREF", "EQ", "LP", "RP", "LB", "RB", 
        "RC", "DOT", "COMMA", "COLON", "PLUS", "MINUS", "LC_COMMENT", "SEMI_COMMENT", 
        "BOOL_CONSTANT", "FLOAT_CONSTANT", "HEX_INTEGER_CONSTANT", "INTEGER_CONSTANT", 
        "STRING_CONSTANT", "IDENT", "COMMENT", "WS"
    ];
    public static readonly ruleNames = [
        "schema", "schema_ele", "struct_decl", "interface_decl", "table_decl", 
        "enum_decl", "field_decl", "foreign_decl", "key_decl", "enum_value_empty", 
        "enum_value_assigned", "type_", "type_ele", "ref", "key", "metadata", 
        "ident_with_opt_single_value", "minus_ident", "single_value", "enum_number", 
        "ns_ident", "identifier", "leading_comment", "suffix_comment",
    ];

    public get grammarFileName(): string { return "Cfg.g4"; }
    public get literalNames(): (string | null)[] { return CfgParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return CfgParser.symbolicNames; }
    public get ruleNames(): string[] { return CfgParser.ruleNames; }
    public get serializedATN(): number[] { return CfgParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, CfgParser._ATN, CfgParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public schema(): SchemaContext {
        let localContext = new SchemaContext(this.context, this.state);
        this.enterRule(localContext, 0, CfgParser.RULE_schema);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 51;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 48;
                    this.schema_ele();
                    }
                    }
                }
                this.state = 53;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            this.state = 57;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 54;
                this.suffix_comment();
                }
                }
                this.state = 59;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 60;
            this.match(CfgParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public schema_ele(): Schema_eleContext {
        let localContext = new Schema_eleContext(this.context, this.state);
        this.enterRule(localContext, 2, CfgParser.RULE_schema_ele);
        try {
            this.state = 66;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 62;
                this.struct_decl();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 63;
                this.interface_decl();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 64;
                this.table_decl();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 65;
                this.enum_decl();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public struct_decl(): Struct_declContext {
        let localContext = new Struct_declContext(this.context, this.state);
        this.enterRule(localContext, 4, CfgParser.RULE_struct_decl);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 71;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 68;
                this.leading_comment();
                }
                }
                this.state = 73;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 74;
            this.match(CfgParser.STRUCT);
            this.state = 75;
            this.ns_ident();
            this.state = 76;
            this.metadata();
            this.state = 77;
            this.match(CfgParser.LC_COMMENT);
            this.state = 82;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    this.state = 80;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
                    case 1:
                        {
                        this.state = 78;
                        this.field_decl();
                        }
                        break;
                    case 2:
                        {
                        this.state = 79;
                        this.foreign_decl();
                        }
                        break;
                    }
                    }
                }
                this.state = 84;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            }
            this.state = 88;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 85;
                this.suffix_comment();
                }
                }
                this.state = 90;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 91;
            this.match(CfgParser.RC);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public interface_decl(): Interface_declContext {
        let localContext = new Interface_declContext(this.context, this.state);
        this.enterRule(localContext, 6, CfgParser.RULE_interface_decl);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 96;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 93;
                this.leading_comment();
                }
                }
                this.state = 98;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 99;
            this.match(CfgParser.INTERFACE);
            this.state = 100;
            this.ns_ident();
            this.state = 101;
            this.metadata();
            this.state = 102;
            this.match(CfgParser.LC_COMMENT);
            this.state = 104;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 103;
                    this.struct_decl();
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 106;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 8, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            this.state = 111;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 108;
                this.suffix_comment();
                }
                }
                this.state = 113;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 114;
            this.match(CfgParser.RC);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public table_decl(): Table_declContext {
        let localContext = new Table_declContext(this.context, this.state);
        this.enterRule(localContext, 8, CfgParser.RULE_table_decl);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 119;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 116;
                this.leading_comment();
                }
                }
                this.state = 121;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 122;
            this.match(CfgParser.TABLE);
            this.state = 123;
            this.ns_ident();
            this.state = 124;
            this.key();
            this.state = 125;
            this.metadata();
            this.state = 126;
            this.match(CfgParser.LC_COMMENT);
            this.state = 130;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    this.state = 130;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 11, this.context) ) {
                    case 1:
                        {
                        this.state = 127;
                        this.field_decl();
                        }
                        break;
                    case 2:
                        {
                        this.state = 128;
                        this.foreign_decl();
                        }
                        break;
                    case 3:
                        {
                        this.state = 129;
                        this.key_decl();
                        }
                        break;
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 132;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 12, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            this.state = 137;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 134;
                this.suffix_comment();
                }
                }
                this.state = 139;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 140;
            this.match(CfgParser.RC);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public enum_decl(): Enum_declContext {
        let localContext = new Enum_declContext(this.context, this.state);
        this.enterRule(localContext, 10, CfgParser.RULE_enum_decl);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 145;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 142;
                this.leading_comment();
                }
                }
                this.state = 147;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 148;
            this.match(CfgParser.ENUM);
            this.state = 149;
            this.ns_ident();
            this.state = 150;
            this.metadata();
            this.state = 151;
            this.match(CfgParser.LC_COMMENT);
            this.state = 162;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 17, this.context) ) {
            case 1:
                {
                this.state = 153;
                this.errorHandler.sync(this);
                alternative = 1;
                do {
                    switch (alternative) {
                    case 1:
                        {
                        {
                        this.state = 152;
                        this.enum_value_empty();
                        }
                        }
                        break;
                    default:
                        throw new antlr.NoViableAltException(this);
                    }
                    this.state = 155;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 15, this.context);
                } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
                }
                break;
            case 2:
                {
                this.state = 158;
                this.errorHandler.sync(this);
                alternative = 1;
                do {
                    switch (alternative) {
                    case 1:
                        {
                        {
                        this.state = 157;
                        this.enum_value_assigned();
                        }
                        }
                        break;
                    default:
                        throw new antlr.NoViableAltException(this);
                    }
                    this.state = 160;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 16, this.context);
                } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
                }
                break;
            }
            this.state = 167;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 164;
                this.suffix_comment();
                }
                }
                this.state = 169;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 170;
            this.match(CfgParser.RC);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public field_decl(): Field_declContext {
        let localContext = new Field_declContext(this.context, this.state);
        this.enterRule(localContext, 12, CfgParser.RULE_field_decl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 175;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 172;
                this.leading_comment();
                }
                }
                this.state = 177;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 178;
            this.identifier();
            this.state = 179;
            this.match(CfgParser.COLON);
            this.state = 180;
            this.type_();
            this.state = 182;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10 || _la === 11) {
                {
                this.state = 181;
                this.ref();
                }
            }

            this.state = 184;
            this.metadata();
            this.state = 185;
            this.match(CfgParser.SEMI_COMMENT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public foreign_decl(): Foreign_declContext {
        let localContext = new Foreign_declContext(this.context, this.state);
        this.enterRule(localContext, 14, CfgParser.RULE_foreign_decl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 190;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 187;
                this.leading_comment();
                }
                }
                this.state = 192;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 193;
            this.match(CfgParser.REF);
            this.state = 194;
            this.identifier();
            this.state = 195;
            this.match(CfgParser.COLON);
            this.state = 196;
            this.key();
            this.state = 197;
            this.ref();
            this.state = 198;
            this.metadata();
            this.state = 199;
            this.match(CfgParser.SEMI_COMMENT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public key_decl(): Key_declContext {
        let localContext = new Key_declContext(this.context, this.state);
        this.enterRule(localContext, 16, CfgParser.RULE_key_decl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 204;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 201;
                this.leading_comment();
                }
                }
                this.state = 206;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 207;
            this.key();
            this.state = 208;
            this.match(CfgParser.SEMI_COMMENT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public enum_value_empty(): Enum_value_emptyContext {
        let localContext = new Enum_value_emptyContext(this.context, this.state);
        this.enterRule(localContext, 18, CfgParser.RULE_enum_value_empty);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 213;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 210;
                this.leading_comment();
                }
                }
                this.state = 215;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 216;
            this.identifier();
            this.state = 217;
            this.match(CfgParser.SEMI_COMMENT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public enum_value_assigned(): Enum_value_assignedContext {
        let localContext = new Enum_value_assignedContext(this.context, this.state);
        this.enterRule(localContext, 20, CfgParser.RULE_enum_value_assigned);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 222;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 219;
                this.leading_comment();
                }
                }
                this.state = 224;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 225;
            this.identifier();
            this.state = 226;
            this.match(CfgParser.EQ);
            this.state = 227;
            this.enum_number();
            this.state = 228;
            this.match(CfgParser.SEMI_COMMENT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public type_(): Type_Context {
        let localContext = new Type_Context(this.context, this.state);
        this.enterRule(localContext, 22, CfgParser.RULE_type_);
        try {
            this.state = 243;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 25, this.context) ) {
            case 1:
                localContext = new TypeListContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 230;
                this.match(CfgParser.TLIST);
                this.state = 231;
                this.match(CfgParser.T__0);
                this.state = 232;
                this.type_ele();
                this.state = 233;
                this.match(CfgParser.T__1);
                }
                break;
            case 2:
                localContext = new TypeMapContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 235;
                this.match(CfgParser.TMAP);
                this.state = 236;
                this.match(CfgParser.T__0);
                this.state = 237;
                this.type_ele();
                this.state = 238;
                this.match(CfgParser.COMMA);
                this.state = 239;
                this.type_ele();
                this.state = 240;
                this.match(CfgParser.T__1);
                }
                break;
            case 3:
                localContext = new TypeBasicContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 242;
                this.type_ele();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public type_ele(): Type_eleContext {
        let localContext = new Type_eleContext(this.context, this.state);
        this.enterRule(localContext, 24, CfgParser.RULE_type_ele);
        try {
            this.state = 247;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 26, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 245;
                this.match(CfgParser.TBASE);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 246;
                this.ns_ident();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ref(): RefContext {
        let localContext = new RefContext(this.context, this.state);
        this.enterRule(localContext, 26, CfgParser.RULE_ref);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 249;
            _la = this.tokenStream.LA(1);
            if(!(_la === 10 || _la === 11)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 250;
            this.ns_ident();
            this.state = 252;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 15) {
                {
                this.state = 251;
                this.key();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public key(): KeyContext {
        let localContext = new KeyContext(this.context, this.state);
        this.enterRule(localContext, 28, CfgParser.RULE_key);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 254;
            this.match(CfgParser.LB);
            this.state = 255;
            this.identifier();
            this.state = 260;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 19) {
                {
                {
                this.state = 256;
                this.match(CfgParser.COMMA);
                this.state = 257;
                this.identifier();
                }
                }
                this.state = 262;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 263;
            this.match(CfgParser.RB);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public metadata(): MetadataContext {
        let localContext = new MetadataContext(this.context, this.state);
        this.enterRule(localContext, 30, CfgParser.RULE_metadata);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 276;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 13) {
                {
                this.state = 265;
                this.match(CfgParser.LP);
                this.state = 266;
                this.ident_with_opt_single_value();
                this.state = 271;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 19) {
                    {
                    {
                    this.state = 267;
                    this.match(CfgParser.COMMA);
                    this.state = 268;
                    this.ident_with_opt_single_value();
                    }
                    }
                    this.state = 273;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 274;
                this.match(CfgParser.RP);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ident_with_opt_single_value(): Ident_with_opt_single_valueContext {
        let localContext = new Ident_with_opt_single_valueContext(this.context, this.state);
        this.enterRule(localContext, 32, CfgParser.RULE_ident_with_opt_single_value);
        let _la: number;
        try {
            this.state = 284;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case CfgParser.STRUCT:
            case CfgParser.INTERFACE:
            case CfgParser.TABLE:
            case CfgParser.ENUM:
            case CfgParser.TLIST:
            case CfgParser.TMAP:
            case CfgParser.TBASE:
            case CfgParser.IDENT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 278;
                this.identifier();
                this.state = 281;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 12) {
                    {
                    this.state = 279;
                    this.match(CfgParser.EQ);
                    this.state = 280;
                    this.single_value();
                    }
                }
